--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,65 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center border">
+    <h1 class="display-1">Pizza Bros</h1>
+    <p>Authentic pizza since 1961!</p>
+</div>
+
+<div id="TopPicksCarousel" class="carousel slide" data-ride="carousel">
+
+    
+    <div class="carousel-inner">
+        <a class="carousel-item active" href="#PepperoniItemPage" style="text-decoration:none">
+                <div class="carousel-item-left">
+                    <img src="https://images.unsplash.com/photo-1564128442383-9201fcc740eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=931&q=80" class="d-block w-100" alt="Pepperoni">
+                </div>
+                <div class="carousel-item-right">
+                    <h4>Pepperoni</h4>
+                    <p>Made with fresh Pepperoni slices and our classic Mozzarella Cheese.</p>
+                </div>
+        </a>
+
+
+        <a class="carousel-item" href="#AllDressedItemPage" style="text-decoration:none">
+                <div class="carousel-item-left">
+                    <img src="https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80" class="d-block w-100" alt="AllDressed">
+                </div>    
+                <div class="carousel-item-right">
+                    <h4>All Dressed</h4>
+                    <p>Made with fresh Pepperoni slices, fresh Vegetables and our classic Mozzarella Cheese.</p>
+                </div>  
+        </a>
+
+        <a class="carousel-item" href="#CheeseItemPage" style="text-decoration:none">
+                <div class="carousel-item-left">
+                    <img src="https://thumbs.dreamstime.com/b/cheese-pizza-yummy-lifting-up-51994812.jpg" class="d-block w-100" alt="Cheese">
+                </div>
+                <div class="carousel-item-right">
+                    <h4>Cheese</h4>
+                    <p>Made with our classic Mozzarella Cheese.</p>
+                </div>
+        </a>
+
+        <a class="carousel-item" href="#VegetarianItemPage" style="text-decoration:none">
+                <div class="carousel-item-left">
+                    <img src="https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80" class="d-block w-100" alt="Vegetarian">
+                </div>
+                <div class="carousel-item-right">
+                    <h4>Vegetarian</h4>
+                    <p>Made with fresh Vegetables and our classic Mozzarella Cheese.</p>
+                </div>
+        </a>
+    </div>
+
+    <a class="carousel-control-prev" href="#TopPicksCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+
+    </a>
+
+    <a class="carousel-control-next" href="#TopPicksCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
