Forgot to add cart clickable

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,13 +34,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Career">Careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-primary btn-xlg" href="tel:514-233-5442"background-color:rgba(0,0,238,.5)">
+                            <a class="btn btn-primary btn-xlg" href="tel:514-233-5442" background-color:rgba(0,0,238,.5)">
                                 Delivery in Montréal: <span class="glyphicon glyphicon-earphone"></span>514-233-5442
                             </a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
                     <a>FR</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Cart"><img src="https://cdn-icons.flaticon.com/png/512/2838/premium/2838895.png?token=exp=1636904281~hmac=364a5c347311e77d4c8d970939cc9e17" height="20px"/></a>
                 </div>
             </div>
         </nav>
