Added covid protocol

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,11 @@
     <h1 class="display-1">Pizza Bros</h1>
     <p>Authentic pizza since 1961!</p>
 </div>
-
+<div>
+    <center>
+        <img src="~/images/CovidProtocol.jpg" style="margin:15px" class="text-center" alt="Covid Protocol"/>
+    </center>
+</div>
 <div id="TopPicksCarousel" class="carousel slide" data-ride="carousel">
 
     
