Made images local and made display flex
made image and text side by side and made most images local

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,44 +16,56 @@
     
     <div class="carousel-inner">
         <a class="carousel-item active" href="#PepperoniItemPage" style="text-decoration:none">
-                <div class="carousel-item-left">
-                    <img src="https://images.unsplash.com/photo-1564128442383-9201fcc740eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=931&q=80" class="d-block w-100" alt="Pepperoni">
+            <div class="d-flex">
+                <div class="carousel-item-left flex-row p-2">
+                    <!--https://images.unsplash.com/photo-1564128442383-9201fcc740eb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=931&q=80-->
+                    <img src="~/images/PepperoniImage.jpg" class="d-block w-100" alt="Pepperoni">
                 </div>
-                <div class="carousel-item-right">
+                <div class="carousel-item-right flex-row p-2">
                     <h4>Pepperoni</h4>
                     <p>Made with fresh Pepperoni slices and our classic Mozzarella Cheese.</p>
                 </div>
+            </div>
+            
         </a>
 
 
         <a class="carousel-item" href="#AllDressedItemPage" style="text-decoration:none">
-                <div class="carousel-item-left">
-                    <img src="https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80" class="d-block w-100" alt="AllDressed">
-                </div>    
-                <div class="carousel-item-right">
+            <div class="d-flex">
+                <div class="carousel-item-left flex-row p-2">
+                    <!--https://images.unsplash.com/photo-1506354666786-959d6d497f1a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80-->
+                    <img src="~/images/AllDressedImage.jpg" class="d-block w-100" alt="AllDressed">
+                </div>
+                <div class="carousel-item-right flex-row p-2">
                     <h4>All Dressed</h4>
                     <p>Made with fresh Pepperoni slices, fresh Vegetables and our classic Mozzarella Cheese.</p>
-                </div>  
+                </div>
+            </div>
         </a>
 
         <a class="carousel-item" href="#CheeseItemPage" style="text-decoration:none">
-                <div class="carousel-item-left">
+            <div class="d-flex">
+                <div class="carousel-item-left flex-row p-2">
                     <img src="https://thumbs.dreamstime.com/b/cheese-pizza-yummy-lifting-up-51994812.jpg" class="d-block w-100" alt="Cheese">
                 </div>
-                <div class="carousel-item-right">
+                <div class="carousel-item-right flex-row p-2">
                     <h4>Cheese</h4>
                     <p>Made with our classic Mozzarella Cheese.</p>
                 </div>
+            </div>
         </a>
 
         <a class="carousel-item" href="#VegetarianItemPage" style="text-decoration:none">
-                <div class="carousel-item-left">
-                    <img src="https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80" class="d-block w-100" alt="Vegetarian">
+            <div class="d-flex">
+                <div class="carousel-item-left flex-row p-2">
+                    <!--https://images.unsplash.com/photo-1574126154517-d1e0d89ef734?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80-->
+                    <img src="~/images/VegetarianImage.jpg" class="d-block w-100" alt="Vegetarian">
                 </div>
-                <div class="carousel-item-right">
+                <div class="carousel-item-right flex-row p-2">
                     <h4>Vegetarian</h4>
                     <p>Made with fresh Vegetables and our classic Mozzarella Cheese.</p>
                 </div>
+            </div>
         </a>
     </div>
 
@@ -68,3 +80,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+<style>
+    
+</style>
