--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -59,18 +59,14 @@
                 <label asp-for="Topic" class="control-label"></label>
                 <select name="Topic" id="Topic">
                     <option value="" selected disabled hidden>Choose here</option>
-                    <option value="My order">My order</option>
-                    <option value="Feedback">Feedback</option>
                     <option value="Product questions">Product questions</option>
                     <option value="Customer Service and feedback">Customer Service and feedback</option>
-                    <option value="Technical questions, specifications, geometry, sizing and historical information">Technical questions, specifications, geometry, sizing and historical information</option>
-                    <option value="Warranty">Warranty</option>
                     <option value="Registration">Registration</option>
-                    <option value="Catalogue requests">Catalogue requests</option>
-                    <option value="Owner's manuals">Owner's manuals</option>
+                    <option value="Menu requests">Menu requests</option>
                     <option value="Media enquiries">Media enquiries</option>
                     <option value="Sponsorship and donations">Sponsorships and donations</option>
-                </select>                <span asp-validation-for="Topic" class="text-danger"></span>
+                </select>                
+                <span asp-validation-for="Topic" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
