About Us, Career and menu done

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -18,14 +18,18 @@
     <div style="background-color:lightgray">
         <h1>History</h1>
         <p>
-            We are family business who pride ourselves on delivering the highest 
+            We are family business who pride ourselves on delivering the highest quality pizza. We have been in business since 1961.
+            We are committed to growing our brand slowly and steadily.To be a PizzaBro franchisee is a privilege unto itself.  
+            We are proud of the quality food we make and the difference we make in communities across the world.
         </p>
+
     </div>
 
     <div >
         <h1>Values</h1>
         <p>
-           
+            <!--https://visionarybusinessperson.com/pizza-hut-mission-statement-vision-statement/-->
+            “to take pride in making the perfect pizza while providing courteous, helpful service at all times, striving to have every customer say that they plan to be back.”
         </p>
     </div>
 
@@ -35,9 +39,9 @@
     </div>
 
     <div style="background-color:lightgray">
-        <h1>History</h1>
+        <h1>Key Players</h1>
         <p>
-            asbdnkjasnjbasjfbajkbgfsdjkfbsdjfnkldsafnhjskdabfajksdfjksdbfjk
+           
         </p>
     </div>
 </section>
