Added Social Media links

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,7 +56,16 @@
     <footer class="text-center text-lg-start bg-light text-muted">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <div class="me-5 d-none d-lg-block">
-                <span>Get connected with us on social networks:</span>
+                <span>
+                    Get connected with us on social networks:
+                    <a href="https://www.instagram.com/pizzabrospizzeria/" target=" "><img src="~/images/instagram.png" height="35" width="35"/></a>
+                    <a href="https://www.facebook.com/pizzabrospizzeria" target=" "><img src="~/images/facebook.png" height="35" width="35"/></a>
+                    <a href="https://twitter.com/PizzaBros13" target=" "><img src="~/images/twitter.png" height="35" width="35"/></a>
+                    <a href="https://www.tiktok.com/@@pizzabrospizzeria?lang=en" target=" "><img src="~/images/tik-tok.png" height="35" width="35"/></a>
+                    <a href="mailto:pizzabrospizzeria@gmail.com" target=" "><img src="~/images/gmail.png" height="35" width="35"/></a>
+                    <a href="https://www.youtube.com/channel/UCR72NkHXW-KOmTNSSkNqkJw" target=" "><img src="~/images/youtube.png" height="35" width="35"/></a>
+
+                </span>
             </div>
             <div>
                 <!--Bhavik put social media stuff here -->
