--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -41,7 +41,8 @@
     <div style="background-color:lightgray">
         <h1>Key Players</h1>
         <p>
-           
+           David, Daniel, Braeden And Bhavik took a big part in the development of the PizzaBro franchise. They have put countless amount of work
+            and and effort into growing and developing this pizzeria. 
         </p>
     </div>
 </section>
