--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -3,16 +3,54 @@
 *@
 @{
 }
+@model IEnumerable<VPWebSolutions.Data.Entities.OrderItem>
+@using VPWebSolutions.Logic
 <h1>YOUR CART</h1>
-<div id="cartItems"></div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.MenuItem.ImageId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MenuItem.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MenuItem.Price)
+            </th>
 
-<script>
-    var isEmpty = document.getElementById("cartItems").innerHTML === "";
-    if (isEmpty) {
-        document.getElementById("cartItems").innerHTML = '<button onclick="sendToMenu()" id="Button" type="button">START ORDER</button>';
-    }
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in CartActions.listItems)
+        {
+            <tr>
+                <td>
+                    <img src="~/images/@(item.MenuItem.ImageId).jpg" class="menuImg" height="100" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MenuItem.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    <p>$@((item.MenuItem.Price*item.Quantity))</p>
+                </td>
+                <td>
+                    <a asp-action="Remove" asp-route-id="@item.">Remove</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
 
-    function sendToMenu(){
-        window.location.href = "Menu";
-    }
-</script>
+@using (Html.BeginForm("Checkout", "Home", FormMethod.Get))
+{
+    <button class="btn btn-primary" type="submit">Checkout</button>
+}
+
