--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - PizzaBros</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css?ver=<?php echo rand(111,999)?>" />
 </head>
 <body style="margin-top: 4%">
     <header>
@@ -54,7 +54,7 @@
     </div>
     <!-- https://mdbootstrap.com/docs/standard/navigation/footer/#indigocolor -->
     <footer class="text-center text-lg-start bg-light text-muted">
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <section class="d-flex justify-content-center justify-content-lg-between pl-4 py-2 border-bottom">
             <div class="me-5 d-none d-lg-block">
                 <span>
                     Get connected with us on social networks:
@@ -69,27 +69,27 @@
             </div>
         </section>
         <section class="">
-            <div class="container text-center text-md-start mt-5">
-                <div class="row mt-3">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
+            <div class="container text-center text-md-start">
+                <div class="row">
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto">
+                        <h6 class="text-uppercase fw-bold mb-2">
                             <i class="fas fa-gem me-3"></i>Pizza Bros Pizzeria
                         </h6>
-                        <p>
+                        <p class="my-0">
                             We are family business who pride ourselves on delivering the highest quality pizza. We have been in business since 1961.
                             To be a PizzaBro franchisee is a privilege in itself.
                         </p>
                     </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">Pages</h6>
-                        <p><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Index">Home</a></p>
-                        <p><a class="text-reset" asp-area="" asp-controller="Home" asp-action="About">About Us</a></p>
-                        <p><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a></p>
-                        <p><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Menu">Menu</a></p>
-                        <p><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Career">Careers</a></p>
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto">
+                        <h6 class="text-uppercase fw-bold mb-2">Pages</h6>
+                        <p class="my-0"><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Index">Home</a></p>
+                        <p class="my-0"><a class="text-reset" asp-area="" asp-controller="Home" asp-action="About">About Us</a></p>
+                        <p class="my-0"><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a></p>
+                        <p class="my-0"><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Menu">Menu</a></p>
+                        <p class="my-0"><a class="text-reset" asp-area="" asp-controller="Home" asp-action="Career">Careers</a></p>
                     </div>
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0">
+                        <h6 class="text-uppercase fw-bold mb-2">
                             Contact
                         </h6>
                         <p><i class="fas fa-home me-3"></i>21 275 Rue Lakeshore Road, Sainte-Anne-de-Bellevue, QC H9X 3L9</p>
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </section>
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <div class="text-center" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2021 Copyright: VPWebSolutions
         </div>
     </footer>
@@ -109,4 +109,5 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
